--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,10 @@ body{
     font-family: "Roboto", sans-serif;
     color: #2e2f42;
     background: #fff;
-    width: 1440px;
+    margin: 0;
+    width: 100%;
 }
+ 
 ul{
     list-style-type: none;
 }
@@ -11,24 +13,7 @@ ul{
 a{ 
     text-decoration: none;
 }
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding:24px 0px 24px 156px; 
-}
-
-nav ul {
-    padding: 0;
-    display: flex;
-    gap: 20px;
-}
-
-address ul{
-    padding: 0;
-    display: flex;
-    gap: 20px;
-}
+        /*    HEADER */
 .logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -39,38 +24,43 @@ address ul{
     color: #2e2f42;
 }
 
-.logo-blue{
+.logo-style{
     color: #4d5ae5
 }
 
-.headline-link-list{
+.nav-link{
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    }
+}
    
-.headline-ling-list:hover, .headline-ling-list:active {
+.nav-link:hover,
+.nav-link:active,
+.nav-link:focus {
     color: #4D5AE5;
-   }
+}
 
-.contacts-list{
+.contacts-link{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #434455;
- }
+}
 
-.contacts-list:hover{
+.contacts-link:hover,
+.contacts-link:focus {
     color: #404bbf;
 }
 
+         /*    BUTTON */
+
 .button-section{
     background: #2e2f42;
-    width: 1440px;
     height: 600px;
+    width: 1440px;
 }
 
 h1{ 
@@ -86,31 +76,36 @@ h1{
 .btn{
     border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    width: auto;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
     margin-left: 636px;
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    box-sizing: border-box;
+    border: none;
+    cursor: pointer;
+    text-align: center;
 }
-.btn:hover{
-    color: #404BBF;
+
+.btn:hover,
+.btn:focus{
+    background: #404BBF;
 }
+
+         /*    GOALS */
 
 .goals{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-div ul {
+
+.goals-list {
     padding: 0;
     display: flex;
     gap: 24px;
@@ -119,7 +114,8 @@ div ul {
     margin-bottom: 103px;
     margin-right: 156px;
 }
-.title-goals{
+
+.title-goal{
     font-weight: 500;
     font-size: 20px;
     line-height: 120%;
@@ -134,11 +130,16 @@ div ul {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.our-team{
+
+
+          /*    OUR TEAM */
+
+.team-section{
     background: #f4f4fd;
     width: 1440px;
     height: 732px;
 }
+
 .text-team{
     font-weight: 700;
     font-size: 36px;
@@ -147,10 +148,10 @@ div ul {
     text-align: center;
     color: #2e2f42;
     padding-top: 120px;
-    margin-left: 639;
     padding-bottom: 72px;
 }
-.our-team-section ul{
+
+.team-list{
     padding: 0;
     display: flex;
     gap: 24px;
@@ -159,6 +160,7 @@ div ul {
     margin-bottom: 120px;
     margin-right: 156px;
 }
+
 .bordered-team{
     border-radius: 0 0 4px 4px;
     padding: 0px 0px 32px 0px;
@@ -167,7 +169,7 @@ div ul {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: #fff;
 }
-
+   
 .our-name{
     font-weight: 500;
     font-size: 20px;
@@ -188,11 +190,12 @@ div ul {
     margin-bottom: 32px;
 }
 
+           /*    OUR PORTFOLIO */
 .portfolio{
     text-align: center;
     padding-top: 130px;
-    margin-left: 156;
     padding-bottom: 72px;
+    box-sizing: border-box;
 }
 
 .title-portfolio{
@@ -211,6 +214,7 @@ div ul {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+
 .apps-p{
     font-weight: 400;
     font-size: 16px;
@@ -219,12 +223,15 @@ div ul {
     color: #434455;
 }
 
+      /*    FOOTER */
+
 footer{
     background: #2e2f42;
     width: 1440px;
     height: 312px;
     padding-top: 120px;
 }
+
 .footer-text{
     font-weight: 400;
     font-size: 16px;
@@ -232,10 +239,9 @@ footer{
     letter-spacing: 0.02em;
     color: #f4f4fd;
     margin-left: 156px;
-
 }
 
-.logo-two{
+.logo-footer{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
