--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,7 @@
 body{
     font-family: "Roboto", sans-serif;
-    color: #2e2f42;
+    color: #434455;
     background: #fff;
-    margin: 0;
-    width: 100%;
 }
  
 ul{
@@ -21,11 +19,11 @@ a{
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #2e2f42;
+    color: #4d5ae5
 }
 
 .logo-style{
-    color: #4d5ae5
+    color: #2e2f42;
 }
 
 .nav-link{
@@ -39,7 +37,11 @@ a{
 .nav-link:hover,
 .nav-link:active,
 .nav-link:focus {
-    color: #4D5AE5;
+    color: #404bbf;
+}
+
+.contacts{
+    font-style: normal;
 }
 
 .contacts-link{
@@ -59,8 +61,6 @@ a{
 
 .button-section{
     background: #2e2f42;
-    height: 600px;
-    width: 1440px;
 }
 
 h1{ 
@@ -70,23 +70,15 @@ h1{
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    padding: 188px 472px 48px 472px;
 }
 
-.btn{
-    border-radius: 4px;
-    padding: 16px 32px;
-    width: auto;
-    height: 56px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+.butn{
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    margin-left: 636px;
-    box-sizing: border-box;
     border: none;
     cursor: pointer;
     text-align: center;
@@ -99,26 +91,11 @@ h1{
 
          /*    GOALS */
 
-.goals{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.goals-list {
-    padding: 0;
-    display: flex;
-    gap: 24px;
-    margin-top: 120px;
-    margin-left: 156px;
-    margin-bottom: 103px;
-    margin-right: 156px;
-}
 
 .title-goal{
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }  
@@ -126,7 +103,7 @@ h1{
 .title-goal-p{
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -135,82 +112,53 @@ h1{
           /*    OUR TEAM */
 
 .team-section{
-    background: #f4f4fd;
-    width: 1440px;
-    height: 732px;
+    background-color:#FFFFFF;
 }
 
 .text-team{
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    padding-top: 120px;
-    padding-bottom: 72px;
+    text-transform: capitalize;
 }
-
-.team-list{
-    padding: 0;
-    display: flex;
-    gap: 24px;
-    margin-top: 16px;
-    margin-left: 156px;
-    margin-bottom: 120px;
-    margin-right: 156px;
-}
-
-.bordered-team{
-    border-radius: 0 0 4px 4px;
-    padding: 0px 0px 32px 0px;
-    width: 264px;
-    height: 380px;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-    background: #fff;
-}
-   
+  
 .our-name{
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 32px;
 }
 
 .our-name-p{
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
     color: #434455;
-    margin-bottom: 32px;
 }
 
            /*    OUR PORTFOLIO */
-.portfolio{
-    text-align: center;
-    padding-top: 130px;
-    padding-bottom: 72px;
-    box-sizing: border-box;
-}
 
 .title-portfolio{
     font-weight: 700;
     font-size: 36px;
-    line-height: 111%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
+    text-transform: capitalize;
 }
 
 .apps{
     font-weight: 500;
     font-size: 20px;
-    line-height: 120%;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
@@ -218,7 +166,7 @@ h1{
 .apps-p{
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -227,9 +175,6 @@ h1{
 
 footer{
     background: #2e2f42;
-    width: 1440px;
-    height: 312px;
-    padding-top: 120px;
 }
 
 .footer-text{
@@ -238,16 +183,17 @@ footer{
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    margin-left: 156px;
 }
 
 .logo-footer{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 117%;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #f4f4fd;
-    margin-left: 156px;
+    color: #4d5ae5;
 }
+.logo-footer-style{
+    color: #f4f4fd;
+ }
