--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ a{
 }
 
 .butn{
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
